--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+html {
+  overflow: hidden;
+}
 html, body {
   height: 100%;
   margin: 0;
@@ -5,9 +8,9 @@ html, body {
 body {
   font-family: 'Google Sans', sans-serif;
   font-size: 14px;
-  overflow: hidden;
   background: #111;
   color: #fff;
+  overflow-x: hidden;
 }
 body.dragging {
   cursor: ns-resize;
